--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS</title>
+<link rel="stylesheet" href="./main.css">
   </head>
   <body>
     <h1>Fundamentos javascript</h1>
+    <p id="about-me" class="about-me"></p>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
