Attributes and Event

--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   </head>
   <body>
     <h1>Fundamentos javascript</h1>
+    <img id="image">
+    <input type="text">
+<div>
+
     <p id="about-me" class="about-me"></p>
+</div>
+<button id="button">CLick</button>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
